--- a/index.html
+++ b/index.html
@@ -918,6 +918,10 @@ input[type=text]:focus,input[type=email]:focus{border-color:var(--black);}
   .mboard{padding:32px 24px;}
 }
 
+
+/* ── Consultation question steps ── */
+.qs{display:none;}
+.qs.on{display:block;}
 </style>
 </head>
 <body>
